# pyrxd

./: .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .readthedocs.yaml  .secrets.baseline  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  NOTICE  README.md  SECURITY.md  SUPPORT.md  pyproject.toml
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/codeql/: codeql-config.yml
.github/workflows/: ci.yml  codeql.yml  combine-prs.yml  docs.yml  gitleaks.yml  lint.yml  osv-scanner.yml  publish.yml  scorecard.yml  security-review.yml  trufflehog.yml
ci/: README.md  poetry-pin.txt  ruff-pin.txt
conformance/: README.md  dmint-v2-contract-vectors.json
docker/: litecoin-regtest.Dockerfile
docs/: ROADMAP.md  cli-security-backlog.md  conf.py  dmint-followup.md  dmint-research-mainnet.md  dmint-research-photonic-deploy.md  dmint-research-photonic.md  index.rst  pylint.md  radiant-core-wallet-research.md  red-team-checklist.md  requirements.txt  scope-decision-2026-04-30.md  security-audit-scope.md  security-review-playbook.md  showcase.md  swap-order-wire-format.md  threat-model.md  versioning-and-deprecation-policy.md  wallet-cli-decisions.md  wallet-cli-plan.md
docs/api/: agent.rst  btc_wallet.rst  cli.rst  crypto.rst  curve.rst  dmint.rst  eth_wallet.rst  fee_models.rst  glyph.rst  gravity.rst  hd.rst  index.rst  network.rst  pyrxd.rst  script.rst  security.rst  spv.rst  transaction.rst
docs/brainstorms/: 2026-05-07-dmint-integration-brainstorm.md  2026-05-08-dmint-v1-deploy-m2-brainstorm.md  2026-05-19-gravity-bch-spike-findings.md  2026-05-19-gravity-glyph-ft-swap-brainstorm.md  2026-05-19-gravity-p2pkh-spike-findings.md  2026-05-19-gravity-ref-covenant-design.md  2026-05-19-gravity-ref-covenant-spike-findings.md  2026-05-23-gravity-nft-swap-design.md  2026-06-03-htlc-watchtower-brainstorm.md
docs/concepts/: architecture.md  covenant-building-blocks.md  dmint-v1-deploy.md  external-miner-protocol.md  glyph-inspect-tool.md  gravity.md  index.md  parallel-mining.md  radiant-fts-are-on-chain.md  v1-mint-mechanics.md
docs/how-to/: broadcast-a-transaction.md  build-a-cross-chain-swap.md  handle-radiant-bip143-quirks.md  index.md  issue-a-dmint-token.md  migrate-0.4-to-0.5.md  mutation-testing.md  receive-and-check-balance.md  recover-funds-across-wallet-paths.md  run-a-two-host-swap-dry-run.md  spv-verification-pitfalls.md  transfer-a-glyph-token.md  use-the-signing-agent.md  verify-an-spv-proof.md
docs/plans/: 2026-04-24-feat-glyph-mut-container-wave-builders-plan.md  2026-04-24-feat-glyph-scanner-network-to-inventory-plan.md  2026-04-24-feat-hd-wallet-persistence-gap-scanning-plan.md  2026-05-07-feat-dmint-v1-mint-and-reference-miner-plan.md  2026-05-08-feat-dmint-v1-deploy-plan.md  2026-05-11-first-real-v1-dmint-deploy.md  2026-05-11-ship-parallel-miner-plan.md  2026-05-19-feat-gravity-ref-bearing-covenant-plan.md  2026-05-20-feat-gravity-ft-covenant-spend-path-plan.md  2026-05-23-feat-gravity-nft-btc-swap-plan.md  2026-05-24-feat-gravity-taproot-htlc-atomic-swap-plan.md  2026-05-25-feat-gravity-htlc-concrete-legs-plan.md  2026-05-26-feat-gravity-dust-mainnet-trade-plan.md  2026-05-26-feat-gravity-reorg-gate-plan.md  2026-05-28-gravity-round5-remediation-plan.md  2026-05-28-seen-toctou-design-plan.md  2026-05-29-audit-track-durable-seenstore-and-daemon-boundary.md  2026-06-03-feat-htlc-swap-watchtower-plan.md  2026-06-04-feat-hd-wallet-multipath-recovery-discovery-plan.md  2026-06-05-feat-watchtower-v2-refund-autonomy-plan.md  2026-06-11-tier1-onramp-finish-and-radiant-core-bump-plan.md  2026-06-12-litecoin-pow-family-counter-leg-plan.md  2026-06-26-pyrxd-next-steps-brainstorm.md  2026-06-26-pyrxd-remaining-roadmap-backlog.md
docs/research/: wallet-derivation-paths.md
docs/runbooks/: operator-state-backup-recovery.md  photonic-compatibility-reverification.md  watchtower-operations.md
docs/tutorials/: cross-chain-swap.md  index.md  inspect-a-radiant-transaction.md  mint-a-glyph-ft.md  mint-a-glyph-nft.md  mint-from-a-dmint-contract.md  your-first-radiant-transaction.md
examples/: README.md  dmint_claim_demo.py  dmint_v1_deploy_demo.py  ft_deploy_premine.py  ft_transfer_demo.py  glyph_mint_demo.py  gravity_full_trade.py  gravity_live_test.py  gravity_swap_demo.py  htlc_swap_demo.py  mnemonic_to_key.py
guides/: recover-stuck-rxd.md
scripts/: _dust_swap_shared.py  _glyph_mainnet.py  check-no-private-links.py  dmint_v2_mainnet_run.py  dust_swap_resume.py  dust_swap_run.py  eth_swap_grief_run.py  eth_swap_run.py  eth_swap_two_host.py  fuzz_deep.sh  fuzz_overnight.sh  gen-spv-test-fixtures.py  install-git-hooks.sh  mutation_test.sh  post-public-flip.sh  presign_refund.py  radiant_mainnet_chainio.py  refresh-pyodide.sh  swap_run_verify.py  vendor-confusables.py  watchtower_deadman.py  watchtower_dust_run.py  watchtower_run.py  watchtower_sshtr.py
scripts/fuzz_atheris/: harness_classify_input.py  harness_dmint_from_script.py  harness_inspect_script.py  (+2 more)
tests/: _regtest_grind_chains.py  conftest.py  test_aes_cbc.py  test_agent_daemon.py  test_agent_signer.py  test_base58.py  test_btc_chains.py  test_btc_htlc_leg.py  test_btc_htlc_regtest_e2e.py  test_btc_taproot.py  test_btc_txid_from_raw.py  test_btc_wallet.py  test_capped_fee_source.py  test_cbor_cross_decoder.py  test_confusables.py  test_covenant.py  test_coverage_gaps.py  test_coverage_gaps2.py  test_coverage_gaps3.py  test_coverage_gaps4.py  test_coverage_gaps5.py  test_coverage_gaps6.py  test_coverage_gaps7.py  test_coverage_gaps8.py  test_crypto_aead.py  test_crypto_kem.py  test_curve.py  test_dmint_conformance_vectors.py  test_dmint_daa_offchain_onchain_differential.py  test_dmint_deploy_integration.py  test_dmint_end_to_end.py  test_dmint_module.py  test_dmint_v1_deploy.py  test_dmint_v1_mint.py  test_dmint_v2_canonical.py  test_dmint_v2_daa_canonical.py  test_dmint_v2_mainnet_golden.py  test_dmint_v2_regtest_e2e.py  test_dust_swap_shared.py  test_encrypted_content_types.py  (+89 more)
(+285 files in other folders)
